proyect running. Added test fixed some endpoints
